trunk/Archive2/01/43e37a21b2105c/output
main.cpp:11:10: error: no matching constructor for initialization of 'foo'
    auto z = x;
         ^   ~
main.cpp:3:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    foo() = default;
    ^
1 error generated.
